--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
+    "express-mongo-sanitize": "^2.2.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.6",
     "morgan": "^1.10.1",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -31,6 +33,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/validator": "^13.15.10",
     "tsc-watch": "^7.2.0"
   }
 }
