--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^9.1.6",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11",
-    "validator": "^13.15.26"
+    "validator": "^13.15.26",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
