--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsc-watch --onSuccess \"nodemon dist/server.js\"",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -34,7 +35,10 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.15.10",
-    "tsc-watch": "^7.2.0"
+    "supertest": "^7.2.2",
+    "tsc-watch": "^7.2.0",
+    "vitest": "^4.0.18"
   }
 }
