--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
+# Server
 PORT=3000
+
+# Database
 MONGODB_URI=mongodb://127.0.0.1:27017/gymDiary
+
+# JWT secrets (use long random values in production)
 JWT_ACCESS_SECRET=change_me
 JWT_REFRESH_SECRET=change_me_too
-ACCESS_EXPIRES_IN=900 # 15min
-REFRESH_EXPIRES_IN=604800 # 7d
-EOF
+
+# Token lifetimes (seconds)
+ACCESS_EXPIRES_IN=900        # 15 minutes
+REFRESH_EXPIRES_IN=604800    # 7 days
