--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsc-watch --onSuccess \"nodemon dist/server.js\"",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "vitest"
+    "test": "vitest run"
   },
   "keywords": [],
   "author": "",
